Improve Email Service and Form submition

--- a/views/forgot-password-req.ejs
+++ b/views/forgot-password-req.ejs
@@ -9,7 +9,7 @@
         <input type="email" id="email" name="email" placeholder="Enter email address" required value="<%= locals.email %>"/>
       </div>
        <!-- Forgot request button -->
-      <button type="submit">Send Reset Link</button>
+      <button type="submit" id="submit_button">Send Reset Link</button>
       <div class="go_to_links-container">
         <a href="/user/login">Go to LogIn</a>
         <a href="/user/signup">Go to SignUp</a>
