--- a/views/reset-password-after-forgot-req.ejs
+++ b/views/reset-password-after-forgot-req.ejs
@@ -11,7 +11,7 @@
         <input type="password" id="password" name="password" placeholder="Enter your password" required  value="<%= locals.password %>"/>
       </div>
        <!-- Reset request button -->
-      <button type="submit">Reset Passwrod</button>
+      <button type="submit" id="submit_button">Reset Passwrod</button>
     </form>
   </div>
 </main>
