--- a/views/reset-password-after-login.ejs
+++ b/views/reset-password-after-login.ejs
@@ -15,7 +15,7 @@
         <input type="password" id="newPassword" name="newPassword" placeholder="Enter your New password" required value="<%= locals.newPassword %>"/>
       </div>
        <!-- Reset request button -->
-      <button type="submit">Reset Passwrod</button>
+      <button type="submit" id="submit_button">Reset Passwrod</button>
     </form>
   </div>
 </main>
