--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,7 +32,7 @@
         <input type="password" id="password" name="password" placeholder="Enter your password" required value="<%= locals.password %>"/>
       </div>
        <!-- SignUp button -->
-      <button type="submit">Sign Up</button>
+      <button type="submit" id="submit_button">Sign Up</button>
       <p >Have an account? <a href="/user/login">Login</a></p>
     </form>
   </div>
