Adjust form width

--- a/public/css/form.common.css
+++ b/public/css/form.common.css
@@ -1,6 +1,6 @@
 /* Form styling */
 .form {
-  width: 435px;
+  /* width: 435px; */
   background: #fff;
   border-radius: 6px;
   padding: 2rem 3rem;
